Fix dictation pref not updating

Bug: 865260
Change-Id: Ied9a9068518cdbc9e05a42cace066c110c0c0e05
Reviewed-on: https://chromium-review.googlesource.com/1147494
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Katie Dektar <katie@chromium.org>
Commit-Queue: Zach Helfinstein <zhelfins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578476}
Former-commit-id: 139fb9b517de2eacc2a057433ccced086aa5f7a7